--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5"
   },
   "scripts": {
